# msc-ds-exercise

diabetes-streamlit/: README.md  Train_ML_diabetes.ipynb  app.py  app_basic.py  best_diabetes_model.pkl  config.py  pyproject.toml  requirements.txt
